files/script/test/parse_error/math/test_var_math_error1.nl

def main()
{
    var safe_1 = 0xl32l34

}

#script("test/parse_error/math/test_var_math_error1.nl")
